--- a/Notebooks/Geoqueries.ipynb
+++ b/Notebooks/Geoqueries.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60b6fe2",
+   "id": "61de38af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b598d150",
+   "id": "3037fc68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "95a9205b",
+   "id": "6b9753f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5e68ca9a",
+   "id": "b4b960e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "aa2fb14a",
+   "id": "12a9d17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "727f7c34",
+   "id": "645910f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "564e1463",
+   "id": "fa6da85a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "96277ae0",
+   "id": "536d23e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "9e810583",
+   "id": "048dc632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ee132962",
+   "id": "7e5cb731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "3484f9c3",
+   "id": "23c130c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "672af87d",
+   "id": "74d93edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "b2c98ceb",
+   "id": "06e0281f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "dd404183",
+   "id": "4f6d3605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "1f439581",
+   "id": "3b1fa838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b7f40c92",
+   "id": "953d944a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "6e01b249",
+   "id": "3ab0c20c",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "664b5ef9",
+   "id": "b2087caa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "33ff9d1b",
+   "id": "5bcbfa25",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "29cff8e4",
+   "id": "88eb98f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "6daf2870",
+   "id": "756e8d9a",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "78a1375d",
+   "id": "4a15b3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,8 +316,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 137,
+   "id": "ae0384fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = [punvanc, punbev, punirv]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e90a49ec",
+   "id": "66ec7e6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "46ee9f12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finalresults = [{'Vancouver': punvanc},\n",
+    "                {'Beverly Hills': punbev},\n",
+    "                {'Irvine': punirv}\n",
+    "    \n",
+    "               ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "475c11fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Vancouver</th>\n",
+       "      <th>Beverly Hills</th>\n",
+       "      <th>Irvine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.253551</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.399051</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.078889</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Vancouver  Beverly Hills    Irvine\n",
+       "0   7.253551            NaN       NaN\n",
+       "1        NaN       7.399051       NaN\n",
+       "2        NaN            NaN  0.078889"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(finalresults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3e20288",
    "metadata": {},
    "outputs": [],
    "source": []
