--- a/Notebooks/1_ComparableCompanies.ipynb
+++ b/Notebooks/1_ComparableCompanies.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "### Lybraries:\n",
     "\n",
-    "- Pymongo (MongoClient)"
+    "- Pymongo (MongoClient)\n",
+    "- Pandas"
    ]
   },
   {
