--- a/Notebooks/2_APIs.ipynb
+++ b/Notebooks/2_APIs.ipynb
@@ -66,27 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "6a5a9e0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[49.276345, -123.117337]"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[sim_comp['latitude'][0], sim_comp['longitude'][0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 70,
    "id": "1a031716",
    "metadata": {},
@@ -210,10 +189,7 @@
    "outputs": [],
    "source": [
     "client = MongoClient(\"localhost:27017\")\n",
-    "db = client.get_database(\"Headquarters\")\n",
-    "db.create_collection(\"Vancouver\")\n",
-    "db.create_collection(\"BeverlyHills\")\n",
-    "db.create_collection(\"Irvine\")"
+    "db = client.get_database(\"Headquarters\")\n"
    ]
   },
   {
@@ -226,6 +202,14 @@
     "vanc = pd.DataFrame(Vancmongo)\n",
     "bev = pd.DataFrame(Bevmongo)\n",
     "irv = pd.DataFrame(Irvmongo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e130799",
+   "metadata": {},
+   "source": [
+    "### Vancouver"
    ]
   },
   {
@@ -293,6 +277,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8626232",
+   "metadata": {},
+   "source": [
+    "### Beverly Hills"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "bcc51d96",
@@ -343,6 +335,14 @@
    "source": [
     "db.BeverlyHills.create_index([(\"geometry\", GEOSPHERE)])\n",
     "db.BeverlyHills.insert_many(gdfbev_dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "959aecbd",
+   "metadata": {},
+   "source": [
+    "### Irvine"
    ]
   },
   {
