--- a/Notebooks/3_Geoqueries.ipynb
+++ b/Notebooks/3_Geoqueries.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61de38af",
+   "id": "9f6b3469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 149,
    "id": "95505772",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,15 @@
     "from cartoframes.viz import Map, Layer, popup_element\n",
     "import shapely.geometry\n",
     "import json\n",
-    "from bson.json_util import dumps"
+    "from bson.json_util import dumps\n",
+    "import matplotlib\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3037fc68",
+   "id": "27cb405b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6b9753f4",
+   "id": "0b5797bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b4b960e3",
+   "id": "42c613c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "12a9d17a",
+   "id": "1182fc5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "645910f0",
+   "id": "0c23538c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fa6da85a",
+   "id": "b5a010a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "536d23e1",
+   "id": "774fae39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "048dc632",
+   "id": "89a89719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7e5cb731",
+   "id": "133393a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "23c130c3",
+   "id": "ae0ed577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "74d93edb",
+   "id": "a3cd9ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "06e0281f",
+   "id": "1c272046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "4f6d3605",
+   "id": "23fc853e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "3b1fa838",
+   "id": "713deceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "953d944a",
+   "id": "0bd98042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "3ab0c20c",
+   "id": "14d5b587",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b2087caa",
+   "id": "897402e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "5bcbfa25",
+   "id": "e1dd9c22",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "88eb98f7",
+   "id": "b4a33ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "756e8d9a",
+   "id": "761d45a3",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "4a15b3c2",
+   "id": "8cee6499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "ae0384fb",
+   "id": "4c4999a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ec7e6b",
+   "id": "05d87bbe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "46ee9f12",
+   "id": "6535feaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "475c11fa",
+   "id": "70a18c02",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e20288",
+   "id": "6a00cf8a",
    "metadata": {},
    "outputs": [],
    "source": []
